# crun

./: Cargo.toml  README.md
src/: consumer.rs  job.rs  lib.rs  producer.rs
src/consumer/: mod.rs  string.rs
src/pipeline/: composite.rs  consumer.rs  job.rs  mod.rs  pipeline.rs  producer.rs
src/producer/: job.rs  mod.rs  string.rs
src/reddit/: producer.rs
src/storage/: memory.rs
